--- a/custom/all.sass
+++ b/custom/all.sass
@@ -33,13 +33,20 @@
 
 .nav-link
   color: $meda-bk-80
+  padding-top: 4px
+  padding-bottom: 4px
 .nav-link:hover, .nav-link:focus
   color: $medasec
-.nav-pills
-  --bs-nav-pills-border-radius: 999px
-.nav-pills .nav-link.active
+.nav-item .nav-link.active
   background-color: $medasec
+  border-radius: 999px
+  color: #fff
   padding: 4px 16px
+  font-weight: bold
+.dropdown-item:hover, .dropdown-item:focus
+  background-color: $medasec
+  color: #fff
+  fount-weight: bold
 
 .card-point
   position: absolute
