--- a/custom/all.css
+++ b/custom/all.css
@@ -38,21 +38,26 @@
   background-color: #fff !important;
 }
 
-.nav-link {
+.nav-link, .dropdown-toggle.nav-link {
   color: #595857;
 }
 
-.nav-link:hover, .nav-link:focus {
+.nav-link:hover, .nav-link:focus, .dropdown-toggle.nav-link:hover, .dropdown-toggle.nav-link:focus {
   color: #FF8500;
 }
 
-.nav-pills {
+.nav-pills, .nav-pills .dropdown-toggle {
   --bs-nav-pills-border-radius: 999px;
 }
 
-.nav-pills .nav-link.active {
+.nav-pills .nav-link.active, .nav-pills .nav-link.active.dropdown-toggle {
   background-color: #FF8500;
-  padding: 4px 16px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.dropdown-menu .dropdown-item {
+  color: #595857;
 }
 
 .card-point {
