--- a/custom/all.sass
+++ b/custom/all.sass
@@ -31,6 +31,8 @@
 .bg-body-tertiary
   background-color: #fff !important
 
+#navbarEquipments .dropdown-item.active
+  background-color: #fff
 .nav-link,.dropdown-toggle.nav-link
   color: $meda-bk-80
 .nav-link:hover, .nav-link:focus,.dropdown-toggle.nav-link:hover,.dropdown-toggle.nav-link:focus
@@ -50,7 +52,7 @@
 //   color: $meda-bk-80
 .dropdown-menu .dropdown-item
   color: $meda-bk-80
-
+  
 .card-point
   position: absolute
   top: 0
@@ -129,3 +131,6 @@
       width: 100%
       height: 100%
       object-fit: cover
+
+.wrap
+  min-height: 100%
