--- a/custom/all.css
+++ b/custom/all.css
@@ -38,6 +38,10 @@
   background-color: #fff !important;
 }
 
+#navbarEquipments .dropdown-item.active {
+  background-color: #fff;
+}
+
 .nav-link, .dropdown-toggle.nav-link {
   color: #595857;
 }
@@ -151,4 +155,8 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.wrap {
+  min-height: 100%;
 }/*# sourceMappingURL=all.css.map */
