1213現行網頁樣式

--- a/custom/all.css
+++ b/custom/all.css
@@ -38,7 +38,7 @@
   background-color: #fff !important;
 }
 
-#navbarEquipments .dropdown-item.active {
+.dropdown-item:active, .dropdown-item.active {
   background-color: #fff;
 }
 
