--- a/custom/_components.sass
+++ b/custom/_components.sass
@@ -33,3 +33,9 @@
     border: 0
     height: 1px
     background-image: linear-gradient(to right, rgba(41, 64, 118, 0), rgb(41, 64, 118), rgba(41, 64, 118, 0))
+
+@mixin text-color($color1,$color2)
+    background-color: $color1
+    color: $color2
+    @content
+    
