--- a/custom/all.sass
+++ b/custom/all.sass
@@ -1,7 +1,7 @@
 @import 'base'
 @import 'components'
 
-.p-color-bk80, .h-color-bk80 .text-color_bk80
+.p-color-bk80, .h-color-bk80 ,.text-color_bk80
   color: $meda-bk-80
 .h-color-pri
   color: $medapri
