html scroll padding top

--- a/custom/all.sass
+++ b/custom/all.sass
@@ -1,6 +1,8 @@
 @import 'base'
 @import 'components'
 
+html
+  scroll-padding-top: 66px //header 高度
 .p-color-bk80, .h-color-bk80 ,.text-color_bk80
   color: $meda-bk-80
 .h-color-pri
