--- a/custom/all.sass
+++ b/custom/all.sass
@@ -2,7 +2,11 @@
 @import 'components'
 
 html
-  scroll-padding-top: 66px //header 高度
+  scroll-padding-top: 70px //header 高度
+p
+  color: $meda-bk-80
+.p-color-40
+  color:$meda-bk-40
 .p-color-bk80, .h-color-bk80 ,.text-color_bk80
   color: $meda-bk-80
 .h-color-pri
