--- a/custom/all.sass
+++ b/custom/all.sass
@@ -5,8 +5,10 @@ html
   scroll-padding-top: 66px //header 高度
 p
   color: $meda-bk-80
+.p-color-bk0
+  color: $meda-bk-00
 .p-color-40
-  color:$meda-bk-40
+  color: $meda-bk-40
 .p-color-bk80, .h-color-bk80 ,.text-color_bk80
   color: $meda-bk-80
 .h-color-pri
@@ -52,8 +54,6 @@ p
   color: $medasec
   font-weight: bold
 
-.bg-body-tertiary
-  background-color: #fff !important
 .dropdown-item:active, .dropdown-item.active
   background-color: #fff
 .nav-link,.dropdown-toggle.nav-link
