--- a/custom/index.sass
+++ b/custom/index.sass
@@ -15,3 +15,8 @@
     border-radius: 12px
     @include card(75%)
     @include bg-center(cover)
+.hoverStyle
+    transform: scale(0.9)
+    transition: 0.7s
+    &:hover
+        transform: scale(1)
